--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ section .title::after{
 
 /* projects section styling */
 .teams .title::after{
-    content: "ProjeX";
+    content: "Projects";
 }
 .teams .carousel .card{
     background: #222;
